GNOME Bugzilla – Bug 747915
glmixer: fix caps leaks
Last modified: 2015-04-20 08:07:52 UTC
.
Created attachment 301628 [details] [review] glmixer: fix caps leak in gst_gl_mixer_pad_sink_getcaps() Caps refcounting was all wrong in this function. Rewrote it and add some comments to make it clearer. Fix caps leaks with the validate.file.glvideomixer.simple.play_15s.synchronized scenario. https://bugzilla.gnome.org/show_bug.cgi?id=747915 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Created attachment 301647 [details] [review] glmixer: fix caps leak in gst_gl_mixer_pad_sink_getcaps() Caps refcounting was all wrong in this function. Rewrote it and add some comments to make it clearer. Fix caps leaks with the validate.file.glvideomixer.simple.play_15s.synchronized scenario. https://bugzilla.gnome.org/show_bug.cgi?id=747915 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Created attachment 301727 [details] [review] glmixer: unref owned caps when finalizing the mixer Fix a caps leak with the validate.file.glvideomixer.simple.play_15s.synchronized scenario. https://bugzilla.gnome.org/show_bug.cgi?id=747915 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
commit fae93514e4d71ec16a14c36646d9f209cea6da1f Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Thu Apr 16 14:21:16 2015 +0200 glmixer: unref owned caps when finalizing the mixer Fix a caps leak with the validate.file.glvideomixer.simple.play_15s.synchronized scenario. https://bugzilla.gnome.org/show_bug.cgi?id=747915 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Review of attachment 301647 [details] [review]: ::: ext/gl/gstglmixer.c @@ +242,1 @@ returned_caps = gst_caps_intersect (filtered_caps, template_caps); Here, I think template_caps is possibly invalid, as it lost its ref in the previous new call to gst_caps_merge (if sinkcaps != NULL).
Created attachment 301974 [details] [review] glmixer: fix caps leak in gst_gl_mixer_pad_sink_getcaps() Caps refcounting was all wrong in this function. Rewrote it and add some comments to make it clearer. Fix caps leaks with the validate.file.glvideomixer.simple.play_15s.synchronized scenario. https://bugzilla.gnome.org/show_bug.cgi?id=747915 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Thanks, pushed commit ac5e25937b23b55d0e13372fa408167e20cc5dd4 Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Wed Apr 15 15:22:37 2015 +0200 glmixer: fix caps leak in gst_gl_mixer_pad_sink_getcaps() Caps refcounting was all wrong in this function. Rewrote it and add some comments to make it clearer. Fix caps leaks with the validate.file.glvideomixer.simple.play_15s.synchronized scenario. https://bugzilla.gnome.org/show_bug.cgi?id=747915 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>